laba3 demo 3